Resolved colour contrast issues on tables

--- a/app/assets/stylesheets/admin/base.scss
+++ b/app/assets/stylesheets/admin/base.scss
@@ -997,7 +997,7 @@ table .ellipsis {
   }
 }
 
-.muted {
+.muted, .text-muted {
   color: $grey-dark;
 }
 
